--- a/index.html
+++ b/index.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,500;0,600;1,200;1,500;1,600&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,300;1,400&display=swap"
+        rel="stylesheet">
+    <link rel="shortcut icon" href="Icons/donation.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <title>Support-Humanity- Donate Today</title>
 </head>
 <body>
-    
+    <div class="cover-img-section">
+        <div class="cover-element">
+            <h1 class="slogan">Let's Help Those Who Are <br> More In Needs</h1>
+            <p class="measage">Let's give some charity today <span>free-hand</span> to keep humatity intact. Your single penny can save ones life. </p>
+
+            <button class="donate-now">donate now<button>
+        </div>
+    </div>
 </body>
+
 </html>
