Second section done

--- a/index.html
+++ b/index.html
@@ -14,15 +14,42 @@
     <link rel="stylesheet" href="style.css">
     <title>Support-Humanity- Donate Today</title>
 </head>
+
 <body>
-    <div class="cover-img-section">
+    <section class="cover-img-section">
         <div class="cover-element">
             <h1 class="slogan">Let's Help Those Who Are <br> More In Needs</h1>
-            <p class="measage">Let's give some charity today <span>free-hand</span> to keep humatity intact. Your single penny can save ones life. </p>
+            <p class="measage">Let's give some charity today <span>free-hand</span> to keep humatity intact. Your single
+                penny can save ones life. </p>
 
             <button class="donate-now">donate now<button>
         </div>
-    </div>
+    </section>
+
+    <section class="donate-today">
+        <div class="elements">
+            <h1>Donate Today</h1>
+            <p>Although their suffer hard, lets make it a bit easy for them to survive. 💖</p>
+            <p>Select your gift for them:</p>
+            <div class="cards">
+                <div class="gift">
+                    <h4>500</h4>
+                </div>
+                <div class="gift">
+                    <h4>1000</h4>
+                </div>
+                <div class="gift selected">
+                    <h4>1500</h4>
+                </div>
+                <div class="gift">
+                    <h4>2000</h4>
+                </div>
+            </div>
+            <label class="lavel" for="">Please Enter an Amount:</label>
+            <input type="text" id="input" class="input" placeholder="Enter an Amount">
+            <input class="btn" type="submit" value="Donate">
+        </div>
+    </section>
 </body>
 
 </html>
