--- a/index.html
+++ b/index.html
@@ -50,6 +50,34 @@
             <input class="btn" type="submit" value="Donate">
         </div>
     </section>
+
+    <section class="donate-plan">
+        <h1>Our Donate Plan</h1>
+        <p>We have a plan to help the mass people of flood affected area, where more than 3 milion people suffer
+            seriously. Our initial plan is to help them survibe now and rehabitate them after this cricis.
+            Some of our inisiatives are as follow: </p>
+        <div class="cards">
+            <div class="card-1">
+                <img src="Icons/food.png" alt="food">
+                <h2>Donate Food</h2>
+                <p>At present, flooa washes away everythig. No way to buy food, because everythig is under flood water.
+                </p>
+
+            </div>
+            <div class="card-2">
+                <img src="Icons/shelter.png" alt="shelter">
+                <h2>Give Shelter</h2>
+                <p>Almost 95% area of Shylhet Division is under water. Apert from that, allmost all house and resinential building are almost drawn by flood. </p>
+
+            </div>
+            <div class="card-3">
+                <img src="Icons/Frame-1.png" alt="finance">
+                <h2>Help Financialy</h2>
+                <p>This year flood are so much destructive than any othr flood in the recent past. So we have to contribute to rebuid its structure and economy.</p>
+
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
