Fourth section done

--- a/index.html
+++ b/index.html
@@ -78,6 +78,32 @@
             </div>
         </div>
     </section>
+
+    <section class="article-1">
+        <div class="text-area">
+            <h1>Their Life Depends On Your Donation!</h1>
+            <p>Thei life is so much critical situation right now. Its high time help them. Donate a small amount can be helpful for them right now.</p>
+
+            <p>So, help them as your capacity. Click the button for more info.</p>
+            <button class="btn-how-to">How To Contribute?</button>
+        </div>
+        <div class="image-area">
+            <img src="Images/donation13.jpg" alt="Donate-image-1">
+        </div>
+    </section>
+
+    <section class="article-2">
+        <div class="image-area">
+            <img src="Images/donation10.jpg" alt="">
+        </div>
+        <div class="text-area">
+            <h1>They need us to survive</h1>
+            <p>Thei life is so much critical situation right now. Its high time help them. Donate a small amount can be helpful for them right now.</p>
+
+            <p>So, help them as your capacity. Click the button for more info.</p>
+            <button class="btn-how-to">Get Funds!</button>
+        </div>
+    </section>
 </body>
 
 </html>
