--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <p>Thei life is so much critical situation right now. Its high time help them. Donate a small amount can be helpful for them right now.</p>
 
             <p>So, help them as your capacity. Click the button for more info.</p>
-            <button class="btn-how-to">Get Funds!</button>
+            <button class="btn-how-to">Apply for Funds!</button>
         </div>
     </section>
 </body>
