Fifth section added with some modification

--- a/index.html
+++ b/index.html
@@ -67,13 +67,15 @@
             <div class="card-2">
                 <img src="Icons/shelter.png" alt="shelter">
                 <h2>Give Shelter</h2>
-                <p>Almost 95% area of Shylhet Division is under water. Apert from that, allmost all house and resinential building are almost drawn by flood. </p>
+                <p>Almost 95% area of Shylhet Division is under water. Apert from that, allmost all house and
+                    resinential building are almost drawn by flood. </p>
 
             </div>
             <div class="card-3">
                 <img src="Icons/Frame-1.png" alt="finance">
                 <h2>Help Financialy</h2>
-                <p>This year flood are so much destructive than any othr flood in the recent past. So we have to contribute to rebuid its structure and economy.</p>
+                <p>This year flood are so much destructive than any othr flood in the recent past. So we have to
+                    contribute to rebuid its structure and economy.</p>
 
             </div>
         </div>
@@ -82,7 +84,8 @@
     <section class="article-1">
         <div class="text-area">
             <h1>Their Life Depends On Your Donation!</h1>
-            <p>Thei life is so much critical situation right now. Its high time help them. Donate a small amount can be helpful for them right now.</p>
+            <p>Thei life is so much critical situation right now. Its high time help them. Donate a small amount can be
+                helpful for them right now.</p>
 
             <p>So, help them as your capacity. Click the button for more info.</p>
             <button class="btn-how-to">How To Contribute?</button>
@@ -98,10 +101,23 @@
         </div>
         <div class="text-area">
             <h1>They need us to survive</h1>
-            <p>Thei life is so much critical situation right now. Its high time help them. Donate a small amount can be helpful for them right now.</p>
+            <p>their life is so much critical situation right now. Its high time help them. Donate a small amount can be
+                helpful for them right now.</p>
 
             <p>So, help them as your capacity. Click the button for more info.</p>
             <button class="btn-how-to">Apply for Funds!</button>
+        </div>
+    </section>
+
+    <section class="get-my-updates">
+        <div class="stuff">
+            <h1>Get My Updates</h1>
+            <p>You can followed up regularly by Newslater.</p>
+            <p>Subscribe Me!</p>
+            <div class="box">
+                <input type="email" placeholder="Enter Your Email">
+                <button>SUBSCRIBE</button>
+            </div>
         </div>
     </section>
 </body>
