Footer section added

--- a/index.html
+++ b/index.html
@@ -120,6 +120,14 @@
             </div>
         </div>
     </section>
+
+    <section class="footer">
+        <p>Designed and Devloped by:</p>
+        <p>©Sarwar Hossain</p>
+        <p>
+            All Right Reserved.
+        </p>
+    </section>
 </body>
 
 </html>
