Payment Methood section added

--- a/index.html
+++ b/index.html
@@ -109,6 +109,17 @@
         </div>
     </section>
 
+    <section class="payment-methoods">
+        <h1>You Can Choose Any of These</h1>
+        <div class="methoods">
+            <div class="icons">
+                <img src="Icons/BKash-Logo.wine.svg" alt="pay with bkash">
+                <img src="Icons/Nagad_Logo_2019.svg" alt="pay with nagad">
+                <img src="Icons/Rocket.svg"alt="pay with rocket">
+            </div>
+        </div>
+    </section>
+
     <section class="get-my-updates">
         <div class="stuff">
             <h1>Get My Updates</h1>
